Add imgur stuff to readme/tokens

--- a/src/CommonBotLibrary/CommonBotLibrary.csproj
+++ b/src/CommonBotLibrary/CommonBotLibrary.csproj
@@ -11,6 +11,7 @@
 
       Features:
       -Google Service: Searches https://google.com for webpages.
+      -Imgur Service: Searches https://imgur.com for images.
       -MyAnimeList Service: Searches https://myanimelist.net for anime.
       -NCalc Service: Evaluates mathematical expressions.
       -Omdb Service: Searches https://omdbapi.com for movies.
